syntax = "proto3";
package beco;

import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumValueOptions {
    optional string string_name = 123456789;
}

service Beco {
    rpc ListUser(ListUserRequest) returns (ListUserResponse);
    rpc AddUser(AddUserRequest) returns (GetUserResponse);
    rpc ListAccount(ListAccountRequest) returns (ListAccountResponse);
    rpc AddAccount(AddAccountRequest) returns (WalletResponse);
}

enum Blockchain {
    UNSPECIFIED = 0;
    XRPL = 1 [
        (string_name) = "XRPL"
    ];
    EVM = 2 [
        (string_name) = "EVM"
    ];
}

message ListAccountRequest {
    Blockchain blockchain = 1;
    string user_id = 2;
}

message AddAccountRequest {
    Blockchain blockchain = 1;
    string alias = 2;
    string user_id = 3;
}

message ListAccountResponse {
    repeated WalletResponse wallets = 1;
    Blockchain blockchain = 2;
}

message WalletResponse {
    string alias = 1;
    string public_key = 2;
    optional string classic_address = 3;
}

message AddUserRequest {
    string name = 1;
}

message GetUserResponse {
    string user_id = 1;
}

message ListUserRequest {}

message ListUserResponse {
    repeated GetUserResponse users = 1;
}